--- a/ImageService/App.config
+++ b/ImageService/App.config
@@ -4,23 +4,10 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <appSettings>
-    <add key="Handler" value="C:\Users\Ofir Sharon\Downloads;C:\Users\Ofir Sharon\Pictures" />
-    <add key="OutputDir" value="C:\Users\Ofir Sharon\Desktop" />
+    <add key="Handler" value="C:\Users\Kartun\Downloads;C:\Users\Kartun\Pictures" />
+    <add key="OutputDir" value="C:\Users\Kartun\Desktop" />
     <add key="SourceName" value="ImageServiceSource" />
     <add key="LogName" value="ImageServiceLog" />
     <add key="ThumbnailSize" value="120" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
-  <system.web>
-    <membership defaultProvider="ClientAuthenticationMembershipProvider">
-      <providers>
-        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
-      </providers>
-    </membership>
-    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
-      <providers>
-        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
-      </providers>
-    </roleManager>
-  </system.web>
 </configuration>
