--- a/ImageService.Infastructure/ImageService.Infastructure.csproj
+++ b/ImageService.Infastructure/ImageService.Infastructure.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enums\CommandEnum.cs" />
+    <Compile Include="Model\CommandRecievedEventArgs.cs" />
     <Compile Include="Model\Config.cs" />
     <Compile Include="Model\Log.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
