--- a/ImageService.Communication/ImageService.Communication.csproj
+++ b/ImageService.Communication/ImageService.Communication.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C6D157CD-B2BF-48E1-80DF-48C770347F66}</ProjectGuid>
+    <ProjectGuid>{D11CDF41-5784-4B46-92F2-AF48CF23A2E0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ImageService.Infastructure</RootNamespace>
-    <AssemblyName>ImageService.Infastructure</AssemblyName>
+    <RootNamespace>ImageService.Communication</RootNamespace>
+    <AssemblyName>ImageService.Communication</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,17 +43,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enums\CommandEnum.cs" />
-    <Compile Include="Model\CommandRecievedEventArgs.cs" />
-    <Compile Include="Model\Config.cs" />
-    <Compile Include="Model\Log.cs" />
+    <Compile Include="ClientHandler.cs" />
+    <Compile Include="Model\CommandMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TcpServerChannel.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ImageService.Logging\ImageService.Logging.csproj">
-      <Project>{C667F9E9-CC89-4C17-B2E0-7B11D8269EA4}</Project>
-      <Name>ImageService.Logging</Name>
+    <ProjectReference Include="..\ImageService.Infastructure\ImageService.Infastructure.csproj">
+      <Project>{C6D157CD-B2BF-48E1-80DF-48C770347F66}</Project>
+      <Name>ImageService.Infastructure</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
