--- a/ImageService/App.config
+++ b/ImageService/App.config
@@ -6,6 +6,7 @@
   <appSettings>
     <add key="Handler" value="C:\Users\Kartun\Downloads;C:\Users\Kartun\Pictures" />
     <add key="OutputDir" value="C:\Users\Kartun\Desktop" />
+    <add key="StudentDetails" value="C:\Users\Kartun\Desktop\students.txt" />
     <add key="SourceName" value="ImageServiceSource" />
     <add key="LogName" value="ImageServiceLog" />
     <add key="ThumbnailSize" value="120" />
