Config view format changed.

--- a/ImageService/App.config
+++ b/ImageService/App.config
@@ -4,9 +4,9 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <appSettings>
-    <add key="Handler" value="C:\Users\Kartun\Downloads;C:\Users\Kartun\Pictures" />
-    <add key="OutputDir" value="C:\Users\Kartun\Desktop" />
-    <add key="StudentDetails" value="C:\Users\Kartun\Desktop\students.txt" />
+    <add key="Handler" value="C:\Users\Ofir Sharon\Downloads;C:\Users\Ofir Sharon\Pictures" />
+    <add key="OutputDir" value="C:\Users\Ofir Sharon\Desktop" />
+    <add key="StudentDetails" value="C:\Users\Ofir Sharon\Desktop\students.txt" />
     <add key="SourceName" value="ImageServiceSource" />
     <add key="LogName" value="ImageServiceLog" />
     <add key="ThumbnailSize" value="120" />
