--- a/ImageService/App.config
+++ b/ImageService/App.config
@@ -5,7 +5,7 @@
   </startup>
   <appSettings>
     <add key="Handler" value="C:\Users\Kartun\Downloads;C:\Users\Kartun\Pictures" />
-    <add key="OutputDir" value="C:\Users\Kartun\Desktop" />
+    <add key="OutputDir" value="C:\Users\Kartun\source\repos\ImageService\ImageWebService" />
     <add key="StudentDetails" value="C:\Users\Kartun\Desktop\students.txt" />
     <add key="SourceName" value="ImageServiceSource" />
     <add key="LogName" value="ImageServiceLog" />
